# ai-tools-for-publishing

./: .gitattributes  .gitignore  LICENSE  pyproject.toml  structure.md  unknown_words.yaml
ai_tools_for_publishing/: __init__.py  hyphenate_html_cli.py  punctuation.py
ai_tools_for_publishing/cli/: __init__.py  arguments.py  config.py  logging.py  main.py  set_up_and_run.py  set_up_and_run_application.py  yaml.py
ai_tools_for_publishing/html_to_markdown/: __init__.py  default_config.py  html_to_markdown_cli.py  main.py
ai_tools_for_publishing/html_to_xhtml/: __init__.py  cli.py  default_config.py  main.py  write_xhtml_file.py
ai_tools_for_publishing/hyphenate_html/: __init__.py  cli.py  default_config.py  hyphenate_body.py  list_unknown_words.py  main.py  write_xhtml_file.py
ai_tools_for_publishing/hyphenate_text/: __init__.py  cli.py  default_config.py  hyphenate_body.py  main.py  voikko.py
ai_tools_for_publishing/reformat_html/: __init__.py  cli.py  default_config.py  formats.py  guess_html_file_encoding.py  main.py  read_html_file.py  soup_to_markdown.py  soup_to_simplified_html.py  soup_to_xhtml.py  write_soup_to_file.py
ai_tools_for_publishing/reformat_text/: __init__.py  cli.py  default_config.py  formats.py  get_body_from_soup.py  main.py  read_file_to_soup.py  read_html_file.py  read_markdown_file.py  soup_to_html.py  soup_to_markdown.py  soup_to_simplified_html.py  soup_to_xhtml.py  write_soup_to_file.py
ai_tools_for_publishing/utils/: __init__.py  yaml.py  (+1 more)
docs/: call_structure.md  structure.md
originals/: README.md
translations/: README.md
(+2 files in other folders)
